--- a/_assets/_css/main.css
+++ b/_assets/_css/main.css
@@ -118,7 +118,104 @@ table {
  * Bleh
  */
  
-.container_16 col.grid_1,
-.container_16 col.grid_2 { 
-    display: table-column; 
-    float: none; }
+    .container_16 col.grid_1,
+    .container_16 col.grid_2,
+    .container_16 col.grid_3,
+    .container_16 col.grid_4,
+    .container_16 col.grid_5,
+    .container_16 col.grid_6,
+    .container_16 col.grid_7,
+    .container_16 col.grid_8,
+    .container_16 col.grid_9,
+    .container_16 col.grid_10,
+    .container_16 col.grid_11,
+    .container_16 col.grid_12,
+    .container_16 col.grid_13,
+    .container_16 col.grid_14,
+    .container_16 col.grid_15,
+    .container_16 col.grid_16 { 
+        display: table-column; 
+        float: none; }
+    
+/**
+ * Table column widths
+ *
+ * ...
+ * 
+ * @section:        modules
+ * @subsection      utility
+ *
+ * @version         0.0.1
+ * @since           0.0.1
+ * @date            2011-03-09 03:06
+ * @lastmodified    2011-03-09 03:06
+ *
+ * @todo            ...
+ *
+ * @css-for         all
+ * @media           all
+ * @affected        all
+ * @bugfix
+ * @workaround
+ * @tested          all
+ * @valid           true
+ */
+    
+    .container_16 col.grid_1 { width: 60px; }
+    .container_16 col.grid_2 { width: 120px; }
+    .container_16 col.grid_3 { width: 180px; }
+    .container_16 col.grid_4 { width: 240px; }
+    .container_16 col.grid_5 { width: 300px; }
+    .container_16 col.grid_6 { width: 360px; }
+    .container_16 col.grid_7 { width: 420px; }
+    .container_16 col.grid_8 { width: 480px; }
+    .container_16 col.grid_9 { width: 540px; }
+    .container_16 col.grid_10 { width: 600px; }
+    .container_16 col.grid_11 { width: 660px; }
+    .container_16 col.grid_12 { width: 720px; }
+    .container_16 col.grid_13 { width: 780px; }
+    .container_16 col.grid_14 { width: 840px; }
+    .container_16 col.grid_15 { width: 900px; }
+    .container_16 col.grid_16 { width: 960px; }
+
+ 
+/**
+ * Last table column
+ *
+ * Ad hoc table column width fix
+ * 
+ * @section:        modules
+ * @subsection      utility
+ *
+ * @version         0.0.1
+ * @since           0.0.1
+ * @date            2011-03-09 03:06
+ * @lastmodified    2011-03-09 03:06
+ *
+ * @todo            ...
+ *
+ * @css-for         all
+ * @media           all
+ * @affected        all
+ * @bugfix
+ * @workaround      ie6, ie7, ie8
+ * @tested          ie6, ie7, ie8
+ * @valid           true
+ */
+ 
+    .container_16 col.grid_1.end { width: 40px; }
+    .container_16 col.grid_2.end { width: 100px; }
+    .container_16 col.grid_3.end { width: 160px; }
+    .container_16 col.grid_4.end { width: 220px; }
+    .container_16 col.grid_5.end { width: 280px; }
+    .container_16 col.grid_6.end { width: 340px; }
+    .container_16 col.grid_7.end { width: 400px; }
+    .container_16 col.grid_8.end { width: 460px; }
+    .container_16 col.grid_9.end { width: 520px; }
+    .container_16 col.grid_10.end { width: 580px; }
+    .container_16 col.grid_11.end { width: 640px; }
+    .container_16 col.grid_12.end { width: 720px; }
+    .container_16 col.grid_13.end { width: 760px; }
+    .container_16 col.grid_14.end { width: 820px; }
+    .container_16 col.grid_15.end { width: 880px; }
+    .container_16 col.grid_16.end { width: 940px; }
