tests of winscp

--- a/_assets/_css/main.css
+++ b/_assets/_css/main.css
@@ -1,7 +1,7 @@
 /**
  * main.css
  *
- * main.css
+ * main.css; what else? 
  *
  * @theme               wm-html5-presentation
  * @layouts             standard
